@@ -215,9 +215,7 @@ sub probe_DDC() {
     $monitor->{ModeLine} = Xconfig::xfree::default_ModeLine();
     my $detailed_timings = $monitor->{detailed_timings} || [];
     foreach (grep { !$_->{bad_ratio} } @$detailed_timings) {
-	my $ratio = $_->{horizontal_active} / $_->{vertical_active};
-
-	if (abs($ratio - 4 / 3) < 0.01) {
+	if (Xconfig::xfree::xorg_builtin_resolution($_->{horizontal_active}, $_->{vertical_active})) {
 	    #- we don't want the 4/3 modelines otherwise they conflict with the Xorg builtin vesamodes
 	} else {
 	    unshift @{$monitor->{ModeLine}},
