@@ -381,14 +381,20 @@ sub default_ModeLine() {
     ModeLine_from_string(qq(Section "Monitor"\n) . (our $default_ModeLine) . qq(EndSection\n));
 }
 
+sub xorg_builtin_resolution {
+    my ($X, $Y) = @_;
+    my $res = $X . 'x' . $Y;
+
+    $res eq '1280x1024' ||
+      $res ne '1400x1050' && $res ne '1152x864' && $Xconfig::xfree::resolution2ratio{$res} eq '4/3';
+}
+
 sub add_gtf_ModeLines {
     my ($raw_X, $resolutions) = @_;
 
     my $banner = 'modeline generated by gtf(1) [handled by XFdrake]';
-    my $res = $resolutions->[0]{X} . 'x' . $resolutions->[0]{Y};
     my @to_add;
-    if ($res ne '1280x1024' && 
-	  ($res eq '1400x1050' || $res eq '1152x864' || $Xconfig::xfree::resolution2ratio{$res} ne '4/3')) {
+    if (!xorg_builtin_resolution($resolutions->[0]{X}, $resolutions->[0]{Y})) {
 	@to_add = map { 
 	  my $resolution = $_;
 	  map {
